2010-11-18  Ernesto Baschny  <ernesto@typo3.org>

	* Release of TYPO3 4.5.0beta1

2010-11-18  Michael Stucki  <michael@typo3.org>

	* Added feature #7942: Enable UTF-8 by default (Thanks to Benni Mack and Christian Kuhn)

2010-11-17  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #16455: DISTINCT as a function is not compatible with DBAL

2010-11-17  Francois Suter  <francois@typo3.org>

	* Fixed bug #16147: getRecordOverlay fetches "Versioning Preview Overlay" but does not return the fields _ORIG_uid and _ORIG_pid (Thanks to Andreas Kiessling)

2010-11-17  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #16453: User Admin>List Users Online uses old styling (Thanks to Felix Kopp)
	* Fixed bug #16452: References table in Info popup uses old styling (Thanks to Felix Kopp)
	* Fixed bug #15189: Frontend Editing edit panels are shown for content element types that cannot be edited

2010-11-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16447: htmlArea RTE: Missing tooltip label for horizontal rule

2010-11-17  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to feature #16420: [linkvalidator] Fix fatal error in class.tx_linkvalidator_modfunc1.php
	* Added feature #16420: Add link validator extension (Thanks to Patrick Gaumond)

2010-11-17  Steffen Kamper  <steffen@typo3.org>

	* Added feature #16432: Add live search to the backend toolbar (Special thanks to Jeff Segars)
	* Follow-up to #16315: added missing mirror push parser (Thanks to Marcus Krause)
	* Fixed bug #16364: EDITPANEL cObject is missing
	* Updated Workspaces to version 4.5.0beta1b. See their ChangeLog for details.
	* Fixed bug #13610: t3lib_BEfunc::viewOnClick - Hook request (Thanks to Mick Klapper)
	* Fixed bug em task or for update fixed
	* Added feature #16295: Optimize stdWrap usage for TypoScript content element FORM (Thanks to Jo Hasenau)
	* Added feature #16287: Optimize stdWrap usage for TypoScript content element IMGTEXT (Thanks to Jo Hasenau)